# libmru

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  NEWS  README.md  configure.ac
calibration/: 10dof1.ini  10dof2.ini  9dof.ini  README.md
contrib/doc/: gyro_calibration.ods
doc/: Doxyfile.in
include/: CMakeLists.txt  Makefile  Makefile.am  calibration.h  chips.h  errors.h  i2cbus.h  types.h  utils.h
pymru/: __init__.py
src/: CMakeLists.txt  Makefile  Makefile.am  calibration.cc  chips.cc  chips.cpp  i2cbus.cc  i2cbus.cpp  ninedof.cpp  tendof.cpp
src/test/: .gitignore  CMakeLists.txt  Makefile.am  boost_copy_file.cc  boost_copy_file.h  module.mk  test_calibration.cpp  test_cgal.cpp  test_chips.cpp  test_i2cbus.cpp  test_types.cpp
src/test/calibration/: .gitignore  test.ini
test/: test_chips.cpp
tools/: CMakeLists.txt  ninedof.cpp  tendof.cpp
