
if (CPPUNIT_FOUND)
  # Linker issues with cppunit on systems that have --as-needed by default (Ubuntu!)
  set(CMAKE_REQUIRED_FLAGS "-Wl,--no-as-needed")
  include_directories(${CPPUNIT_INCLUDE_DIRS})
  link_libraries(mru ${CPPUNIT_LIBRARIES}) 
  add_executable(test_i2cbus test_i2cbus.cpp)
  add_executable(test_chips test_chips.cpp)
  add_executable(test_cgal test_cgal.cpp)
  add_executable(test_types test_types.cpp)
  add_executable(test_calibration test_calibration.cpp)
  add_test(NAME Calibration COMMAND test_calibration)
  add_test(NAME I2C COMMAND test_i2cbus)
  add_test(NAME Chips COMMAND test_chips)
  add_test(NAME CGAL COMMAND test_cgal)
  add_test(NAME Types COMMAND test_types)
endif()
